--- a/style.css
+++ b/style.css
@@ -4,16 +4,25 @@ h1{
   text-decoration: underline;
 }
 
-h2{
-  text-align: center;
-}
+
 
 p{
-  text-align: right;
+  text-align: center;
   border-style: ridge;
-  font-size: 25px;
+  font-size: 20px;
+  font-style: oblique;
+  text-decoration: overline;
 }
 
 body{
   background-color: grey;
+}
+
+.carousel {
+height:inherit;
+  width: 100%;
+}
+
+.badge{
+ size: 10px;
 }
